# ghidra_mcp

./: .gitignore  README.md  crackme  crackme.c  export_context.py  ghidra_context.json  hello.c  main.py  pyproject.toml  run_ghidra.sh  test_main.py
.github/workflows/: mcp.yml
