[project]
name = "ghidra-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
testpaths = ["."]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = ["main"]